tests/snapshots/test_runner__tests__compiler__typecheck__record_type_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do
  let x = {
    x: 2
    y: "hello"
  }

  let z = x.a
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_3.kk:7:13
  │
7 │   let z = x.a
  │             ^ No such property or function
  │
  = Available properties:
      x
      y
